# ChatQTP

./: CMakeLists.txt  ChatQTP.kdev4  README.md  org.kde.chatqtp.desktop  org.kde.chatqtp.json  org.kde.chatqtp.metainfo.xml
.kdev4/: ChatQTP.kdev4
android/: AndroidManifest.xml  build.gradle  version.gradle.in
src/: CMakeLists.txt  about.cpp  about.h  app.cpp  app.h  chatqtpconfig.kcfg  chatqtpconfig.kcfgc  main.cpp  resources.qrc
src/contents/ui/: About.qml  main.qml
